<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.home.HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/home_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/MyOverflowButtonStyle"
        app:menu="@menu/home_menu"
        app:title="@string/find_mcd"
        app:titleTextColor="@color/colorPrimary" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/menu_map_cardview"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="15dp"
                android:elevation="5dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:layout_margin="15dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/maps" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/find_location"
                            android:textColor="@color/textColorGray"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/menu_1" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/menu_food_cardview"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="15dp"
                android:elevation="5dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:layout_margin="15dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/logo" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/menu_and_price"
                            android:textColor="@color/textColorGray"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/menu_2" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <ImageView
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/background" />
    </FrameLayout>

</LinearLayout>